--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -1,3 +1,5 @@
 body {
-    background-color: skyblue;
+    background-color: #ffffff;
+    font-family: Verdana, sans-serif;
+    font-size: .9em;
 }
