--- a/symfony/templates/crud/parts/show.html.twig
+++ b/symfony/templates/crud/parts/show.html.twig
@@ -7,6 +7,6 @@
     <span class="part-label">Name: </span>{{ part.name }}<br>
     <span class="part-label">Price: </span>{{ part.price }}<br>
 
-    <a href="{{ path('app_crud_home_index') }}">Back to home</a>
+    <a href="{{ path('app_crud_part_index') }}">Back to all parts</a>
 
 {% endblock body %}
