--- a/symfony/templates/security/registration.html.twig
+++ b/symfony/templates/security/registration.html.twig
@@ -10,9 +10,9 @@
 
         <button type="submit">Sign Up</button>
         {{ form_end(form) }}
-
+        or
         <div>
-{#            <a href="{{ path('security/login.html.twig') }}">Log In</a>#}
+            <a href="{{ path('app_login') }}">Log In</a>
         </div>
     </div>
 {% endblock body %}
